--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
    </head>
 <body>
   <div class="container">
-    <div class="title">Registration</div>
+    <div class="title">ㅇㅅㅇ</div>
     <div class="content">
       <form action="#">
         <div class="user-details">
